# scdm

./: .gitignore  .gitlab-ci.yml  NEWS  README.md  gdm.doap  meson.build  meson_options.txt
chooser/: chooser-main.c  gdm-chooser-host.c  gdm-chooser-host.h  gdm-chooser-session.c  meson.build  scdm-chooser-host.c  scdm-chooser-host.h  scdm-chooser-session.c  scdm-chooser-session.h  scdm-host-chooser-dialog.c  scdm-host-chooser-dialog.h  scdm-host-chooser-widget.c  scdm-host-chooser-widget.h  scdm-host-chooser.c
common/: gdm-common.c  gdm-common.h  gdm-settings-backend.c  gdm-settings-utils.c  gdm-settings-utils.h  gdm-settings.c  meson.build  scdm-address.c  scdm-address.h  scdm-common-unknown-origin.h  scdm-common.c  scdm-common.h  scdm-log.c  scdm-log.h  scdm-profile.c  scdm-profile.h  scdm-settings-backend.c  scdm-settings-backend.h  scdm-settings-desktop-backend.c  scdm-settings-desktop-backend.h  scdm-settings-direct.c  scdm-settings-direct.h  scdm-settings-keys.h  scdm-settings-utils.c  scdm-settings-utils.h  scdm-settings.c  scdm-settings.h  test-log.c
daemon/: gdm-dbus-util.c  gdm-display-access-file.h  gdm-display-factory.c  gdm-display-factory.h  gdm-display.c  gdm-display.xml  gdm-launch-environment.c  gdm-legacy-display.h  gdm-local-display-factory.c  gdm-local-display-factory.xml  gdm-local-display.h  gdm-local-display.xml  gdm-manager.c  gdm-manager.h  gdm-manager.xml  gdm-session-auditor.c  gdm-session-record.c  gdm-session-settings.h  gdm-session-worker-common.c  gdm-session-worker-job.c  gdm-session-worker.c  gdm-session-worker.xml  gdm-session.c  gdm-session.xml  gdm-wayland-session.c  gdm-x-session.c  gdm-xdmcp-chooser-display.c  gdm-xdmcp-chooser-display.h  gdm-xdmcp-display-factory.h  gdm-xdmcp-display.h  main.c  meson.build  scdm-dbus-util.c  scdm-dbus-util.h  scdm-display-access-file.c  scdm-display-access-file.h  scdm-display-factory.c  scdm-display-factory.h  scdm-display-store.c  scdm-display-store.h  (+47 more)
data/: .gitignore  61-scdm.rules.in  Init.in  PostLogin  Xsession.in  gdm.conf.in  gdm.service.in  io.github.scarecrow-de.login-screen.gschema.xml  io.github.scarecrow_de.login-screen.gschema.xml  locale.alias  meson.build  scarecrow-login.session.in  scdm.conf.in  scdm.schemas.in  scdm.service.in
data/applications/: meson.build
data/autostart/: meson.build  orca-autostart.desktop
data/dconf/: .gitignore  meson.build
data/dconf/defaults/: 00-upstream-settings
data/dconf/defaults/locks/: 00-upstream-settings-locks
data/pam-arch/: scdm-autologin.pam  scdm-launch-environment.pam
data/pam-exherbo/: gdm-autologin.pam  gdm-launch-environment.pam
data/pam-lfs/: gdm-launch-environment.pam  gdm-password.pam  scdm-autologin.pam  scdm-fingerprint.pam  scdm-pin.pam  scdm-smartcard.pam
data/pam-redhat/: gdm-autologin.pam
docs/C/: index.docbook
docs/ca/: ca.po
docs/cs/: cs.po
docs/de/: de.po
docs/el/: el.po
docs/en_GB/: en_GB.po
docs/es/: es.po
docs/fr/: fr.po
docs/gl/: gl.po
docs/hu/: hu.po
docs/id/: id.po
docs/it/: it.po
docs/ko/: ko.po
docs/oc/: oc.po
docs/pt_BR/: pt_BR.po
docs/ro/: ro.po
docs/ru/: ru.po
docs/sl/: sl.po
docs/sv/: sv.po
docs/te/: te.po
docs/tr/: tr.po
docs/uk/: uk.po
docs/zh_CN/: zh_CN.po
libgdm/: gdm-client.c  gdm-user-switching.c  gdm-user-switching.h  gdm.pc.in  meson.build
libscdm/: meson.build  scdm-client.c  scdm-client.h  scdm-sessions.c  scdm-sessions.h  scdm-user-switching.c  scdm-user-switching.h
pam-extensions/: gdm-pam-extensions.h  gdm-pam-extensions.pc.in  meson.build  scdm-pam-extensions.h
pam_scdm/: meson.build
po/: ChangeLog  Makevars  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  (+74 more)
tests/: meson.build  s-common-address.c  s-common.c
utils/: gdm-disable-wayland.c  meson.build  scdm-disable-wayland.c  scdm-screenshot.c  scdmflexiserver.c
